ipc/ipdl/test/ipdl/ok/PStructComparable.ipdl
[Comparable] struct S {
    int i;
    double d;
};

sync protocol PStructComparable {
parent:
    sync test(S s) returns (S ss);
    async __delete__();
};
